--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="/login" method="post">
         <input type="text" name="username">
         <input type="password" name="password">
         <input type="submit" value="提交">
